# MouseFinder

./: CMakeLists.txt
.kiro/specs/mouse-finder/: .config.kiro  design.md  requirements.md  tasks.md
src/: app_controller.cpp  app_controller.h  config.h  cursor_animator.cpp  cursor_animator.h  cursor_scaler.cpp  cursor_scaler.h  main.cpp  mouse_hook.cpp  mouse_hook.h  resource.h  resource.rc  startup_manager.cpp  startup_manager.h  tray_icon.cpp  tray_icon.h
test/: test_main.cpp
